Port 0.8.9 to Fabric 24